--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a class="nav-link" href="index.html"><span class="fa fa-home">Home</span></a> </li>
-              <li class="nav-item"><a class="nav-link" href="aboutus.html"><span class="fa fa-info">About</span></a> </li>
-              <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-list">Menu</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card">Contact</span></a> </li>
+              <li class="nav-item active"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a> </li>
+              <li class="nav-item"><a class="nav-link" href="aboutus.html"><span class="fa fa-info fa-lg"></span> About</a> </li>
+              <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-list fa-lg"></span> Menu</a></li>
+              <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a> </li>
             </ul>
           </div>
 
